--- a/src/main/resources/assets/cultivationera/lang/en_us.json
+++ b/src/main/resources/assets/cultivationera/lang/en_us.json
@@ -2,6 +2,8 @@
   "item.cultivationera.empty_spirit_stone": "Empty Spirit Stone",
   "item.cultivationera.spirit_stone_rank_1": "Rank 1 Spirit Stone",
 
+  "item.cultivationera.smoke_bomb": "Smoke Bomb",
+
   "block.cultivationera.spirit_stone_ore": "Spirit Stone Ore",
   "block.cultivationera.deepslate_spirit_stone_ore": "Deepslate Spirit Stone Ore",
 
